tests/errors/ellipsis_syntax_3.pyx
# mode: error

(
    .
    ..
)

_ERRORS = u"""
4: 4: Expected an identifier or literal
"""
